discussion/kv_engine/162991/162991_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48680: Add vBucket sanity checks to magma inputs

So that we can validate key->vBucket mappings as we pass items
to magma, allowing us to make similar checks on magma outputs
in a future patch which we should be able to use to assert that
an issue exists if we throw an error on output from magma but not
on input to magma.

Change-Id: I9f6648da416e813ed0e808cf5bf63218e7a05e33

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-10-06 13:45:36.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-06 14:27:35.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34727/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dockey_validator.cc:27:26:
error: use of undeclared identifier "getGlobalBucketLogger"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34727/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40824/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore_config.h(181): error C3646: "getVBucketMappingErrorHandlingMethod": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40824/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13207/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:45:21: error: no member named "getErrorHandlingMethod" in the global namespace; did you mean "cb::getErrorHandlingMethod"? [clang-diagnostic-error]
                    ::getErrorHandlingMethod(value));
                    ^~~~~~~~~~~~~~~~~~~~~~~~
                    cb::getErrorHandlingMethod
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.h:28:21: note: "cb::getErrorHandlingMethod" declared here
ErrorHandlingMethod getErrorHandlingMethod(std::string_view);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:116:41: error: no member named "getErrorHandlingMethod" in the global namespace; did you mean "cb::getErrorHandlingMethod"? [clang-diagnostic-error]
    vBucketMappingErrorHandlingMethod = ::getErrorHandlingMethod(
                                        ^~~~~~~~~~~~~~~~~~~~~~~~
                                        cb::getErrorHandlingMethod
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.h:28:21: note: "cb::getErrorHandlingMethod" declared here
ErrorHandlingMethod getErrorHandlingMethod(std::string_view);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5: error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"? [clang-diagnostic-error]
    ErrorHandlingMethod getVBucketMappingErrorHandlingMethod() const {
    ^~~~~~~~~~~~~~~~~~~
    cb::ErrorHandlingMethod
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.h:19:12: note: "cb::ErrorHandlingMethod" declared here
enum class ErrorHandlingMethod {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:184:47: error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"? [clang-diagnostic-error]
    void setVBucketMappingErrorHandlingMethod(ErrorHandlingMethod value) {
                                              ^~~~~~~~~~~~~~~~~~~
                                              cb::ErrorHandlingMethod
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.h:19:12: note: "cb::ErrorHandlingMethod" declared here
enum class ErrorHandlingMethod {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:370:17: error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"? [clang-diagnostic-error]
    std::atomic<ErrorHandlingMethod> vBucketMappingErrorHandlingMethod;
                ^~~~~~~~~~~~~~~~~~~
                cb::ErrorHandlingMethod
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/error_handler.h:19:12: note: "cb::ErrorHandlingMethod" declared here
enum class ErrorHandlingMethod {
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13207/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.cc:45:21:
error: no member named "getErrorHandlingMethod" in the global namespace; did you mean "cb::getErrorHandlingMethod"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13207/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14804/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23090/ : FAILURE

Compile error at [2021-10-06T14:21:56.896Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23090/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2823/ : FAILURE

Compile error at [2021-10-06T14:11:49.820Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2823/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15075/ : FAILURE

Compile error at [2021-10-06T14:13:53.843Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: ?ErrorHandlingMethod? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15075/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2858/ : FAILURE

Compile error at [2021-10-06T13:55:54.308Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: ?ErrorHandlingMethod? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2858/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13951/ : FAILURE

Compile error at [2021-10-06T13:48:42.290Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13951/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15665/ : FAILURE

Compile error at [2021-10-06T14:21:22.320Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:181:5:
error: unknown type name "ErrorHandlingMethod"; did you mean "cb::ErrorHandlingMethod"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15665/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11993/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
